--- a/styles/bio.css
+++ b/styles/bio.css
@@ -172,6 +172,73 @@
 }
 
 /* styles for main content on tablet device */
+@media only screen and (min-width: 768px) {
+  .hero__title {
+    color: #ffffff;
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
+    padding-left: 1rem;
+  }
+  .about {
+    padding: 0 2.25rem;
+  }
+  .about__title {
+    color: #323232;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
+    padding: 3rem 0 2.25rem;
+  }
+  .about__subtitle {
+    color: #323232;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+    padding: 2.25rem 0;
+  }
+  .about__container {
+    padding: 0 5rem;
+  }
+  .about__content {
+    color: #323232;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+    padding-top: 2.25rem;
+  }
+  .about__text-container {
+    display: flex;
+    gap: 2.25rem;
+  }
+  .about__text {
+    color: #323232;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+    padding: 0;
+  }
+  .photo {
+    padding: 0 2.25rem;
+  }
+  .photo__title {
+    color: #323232;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
+    padding: 3rem 0 2.25rem;
+  }
+  .photo__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .photo__image {
+    width: 33%;
+    padding: 0.5rem;
+  }
+}
 html,
 body {
   box-sizing: border-box;
