--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,6 +1,7 @@
 @use "./partials/fonts";
 @use "./partials/components/header";
 @use "./partials/components/mainContent";
+@use "./partials/components/footer";
 
 html,
 body {
