--- a/styles/bio.css
+++ b/styles/bio.css
@@ -219,7 +219,7 @@
     padding: 0;
   }
   .photo {
-    padding: 0 2.25rem;
+    padding: 0 2.25rem 2.25rem;
   }
   .photo__title {
     color: #323232;
@@ -238,6 +238,21 @@
     width: 33%;
     padding: 0.5rem;
     flex-grow: 1;
+  }
+}
+/* styles for header on desktop */
+@media only screen and (min-width: 1280px) {
+  .hero__title {
+    padding-left: 6rem;
+  }
+  .about__title {
+    padding-left: 3.75rem;
+  }
+  .about__container {
+    padding: 0 10rem;
+  }
+  .photo {
+    padding: 0 6rem 2.25rem;
   }
 }
 /* styles for footer for mobile */
@@ -308,6 +323,15 @@
     position: absolute;
     top: 1.5rem;
     right: 3rem;
+  }
+}
+/* styles for header on desktop */
+@media only screen and (min-width: 1280px) {
+  .footer {
+    padding: 0 6rem 2.25rem;
+  }
+  .footer__logo {
+    right: 7rem;
   }
 }
 html,
