--- a/styles/bio.css
+++ b/styles/bio.css
@@ -62,6 +62,7 @@
   border-bottom: 0.2rem solid #ffffff;
 }
 .header__menu-item-link--active {
+  color: #ffffff;
   border-bottom: 0.2rem solid #ffffff;
 }
 
@@ -181,6 +182,19 @@
   filter: grayscale(0%);
 }
 
+.comment {
+  padding: 0 1rem;
+}
+.comment__container {
+  display: flex;
+}
+.comment__avatar {
+  border-radius: 50%;
+  width: 2.25rem;
+  height: 2.25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 /* styles for main content on tablet device */
 @media only screen and (min-width: 768px) {
   .hero__title {
@@ -273,6 +287,9 @@
 .footer__container {
   padding-bottom: 1rem;
 }
+.footer__contact {
+  padding-bottom: 1rem;
+}
 .footer__title {
   color: #ffffff;
   font-size: 1.5rem;
@@ -294,8 +311,10 @@
   line-height: 1.125rem;
   font-weight: 400;
   margin: 0;
-  padding-bottom: 1rem;
   text-decoration: none;
+}
+.footer__spacing {
+  margin: 0 solid #323232;
 }
 
 /* styles for footer on tablet device */
@@ -324,9 +343,8 @@
   .footer__text {
     font-size: 0.875rem;
     line-height: 1.25rem;
-    padding-bottom: 2.25rem;
   }
-  .footer__text--title {
+  .footer__text-title {
     font-weight: 600;
   }
   .footer__logo {
